*** SOME MAVEN COMMANDS ***
1) runs the server at 9090
mvn jetty:run

2) mvn clean install
Build application using default profile dev, only runs Unit test cases

3) mvn clean install -Pintegration-test
Build application skips Unit-test cases, only runs integration tests.
(test categorized using marker interface com.gaurav.test.IntegrationTest
or *IT* test classes