@@ -10,21 +10,31 @@
 	<name>driversearch</name>
 	<url>http://maven.apache.org</url>
 
-	<repositories>
-		<repository>
-			<id>apache-snapshots</id>
-			<name>Apache SNAPSHOT Repository</name>
-			<url>http://repository.apache.org/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
-		</repository>
-	</repositories>
+	<!-- based on profile the properties get set/unset and surfire and failsafe 
+		runs approprirate test-cases -->
+	<profiles>
+		<!-- profile dev config -->
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<build.profile.id>dev</build.profile.id>
+				<skip.integration.tests>true</skip.integration.tests>
+				<skip.unit.tests>false</skip.unit.tests>
+			</properties>
+		</profile>
+		<!-- profile integration-test config -->
+		<profile>
+			<id>integration-test</id>
+			<properties>
+				<build.profile.id>integration-test</build.profile.id>
+				<skip.integration.tests>false</skip.integration.tests>
+				<skip.unit.tests>true</skip.unit.tests>
+			</properties>
+		</profile>
+	</profiles>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -50,6 +60,7 @@
 		<spring-data-elasticsearch.version>2.0.6.RELEASE</spring-data-elasticsearch.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<junit.version>4.12</junit.version>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 		<final.name>driversearch</final.name>
 	</properties>
@@ -60,37 +71,62 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.19.1</version>
+					</dependency>
+				</dependencies>
 				<configuration>
 					<argLine>-XX:-UseSplitVerifier</argLine>
+					<!-- Skips unit tests if the value is true -->
+					<skipTests>${skip.unit.tests}</skipTests>
+					<!-- Excludes integration tests when unit tests are run -->
+					<includes>
+						<include>**/*.class</include>
+					</includes>
+					<excludedGroups>com.gaurav.test.IntegrationTest</excludedGroups>
+					<excludes>
+						<exclude>**/*IT*</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12.4</version>
+				<version>2.19.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.19.1</version>
+					</dependency>
+				</dependencies>
 				<configuration>
-					<additionalClasspathElements>
-						<additionalClasspathElement>src/test/resources</additionalClasspathElement>
-					</additionalClasspathElements>
-					<argLine>-Dcatalina.base=src/test/resources/</argLine>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Dcatalina.base=src/integration-test/resources/</argLine>
+					<skipITs>${skip.integration.tests}</skipITs>
 				</configuration>
 				<executions>
 					<execution>
-						<id>integration-test</id>
-						<phase>integration-test</phase>
+						<id>integration-tests</id>
+						<configuration>
+							<includes>
+								<include>**/*.class</include>
+							</includes>
+							<groups>com.gaurav.test.IntegrationTest
+							</groups>
+						</configuration>
 						<goals>
 							<goal>integration-test</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<phase>verify</phase>
-						<goals>
 							<goal>verify</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -98,6 +134,8 @@
 				<configuration>
 					<contextPath>${final.name}</contextPath>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<daemon>true</daemon>
+					<reload>manual</reload>
 					<connectors>
 						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
 							<port>9090</port>
@@ -105,16 +143,55 @@
 						</connector>
 					</connectors>
 				</configuration>
+				<!-- <executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase> 
+					<goals> <goal>run</goal> </goals> </execution> <execution> <id>stop-jetty</id> 
+					<phase>post-integration-test</phase> <goals> <goal>stop</goal> </goals> </execution> 
+					</executions> -->
+			</plugin>
+
+			<!-- plugin to help keep integrating test classes in sepearate source/resource 
+				folder -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.9.1</version>
+				<executions>
+					<execution>
+						<id>add-integration-test-sources</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<!-- Configures the source directory of our integration tests -->
+							<sources>
+								<source>src/integration-test/java</source>
+							</sources>
+						</configuration>
+					</execution>
+					<!-- Add a new resource directory to our build -->
+					<execution>
+						<id>add-integration-test-resources</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-resource</goal>
+						</goals>
+						<configuration>
+							<!-- Configures the resource directory of our integration tests -->
+							<resources>
+								<resource>
+									<filtering>true</filtering>
+									<directory>src/integration-test/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<!-- Elastic search , will run it in embedded mode for this test project -->
-		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch</artifactId> 
-			<version>${elasticsearch.version}</version> </dependency> <dependency> <groupId>org.elasticsearch.client</groupId> 
-			<artifactId>transport</artifactId> <version>${elasticsearch.version}</version> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-elasticsearch</artifactId>
@@ -303,8 +380,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<version>${junit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
